discussion/kv_engine/154363/154363_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

wip

Change-Id: I3cc740c8d45303e022438a8f23cb728af5151156

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-25 16:07:15.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-25 16:23:17.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30793/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/logger/custom_rotating_file_sink.h:27:10:
fatal error: "spdlog/pattern_formatter.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30793/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9145/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.cc:39:31: error: no member named "payload" in "spdlog::details::log_msg" [clang-diagnostic-error]
    std::string msgString(msg.payload.begin(), msg.payload.end());
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.cc:39:52: error: no member named "payload" in "spdlog::details::log_msg" [clang-diagnostic-error]
    std::string msgString(msg.payload.begin(), msg.payload.end());
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:179:56: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
    void sink_it_(const spdlog::details::log_msg& msg) override;
                                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/spdlog/include/spdlog/logger.h:134:18: note: hidden overloaded virtual function "spdlog::logger::sink_it_" declared here: type mismatch at 1st parameter ("details::log_msg &" vs "const spdlog::details::log_msg &")
    virtual void sink_it_(details::log_msg &msg);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/objectregistry_test.cc:137:46: error: no member named "payload" in "spdlog::details::async_msg" [clang-diagnostic-error]
    const auto asyncMsgCapacity = sizeof(msg.payload) / 2;
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/custom_rotating_file_sink.h:27:10: error: "spdlog/pattern_formatter.h" file not found [clang-diagnostic-error]
#include <spdlog/pattern_formatter.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9145/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.cc:39:31:
error: no member named "payload" in "spdlog::details::log_msg" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9145/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36038/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\bucket_logger.h(179): error C3668: "BucketLogger::sink_it_": method with override specifier "override" did not override any base class methods ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36038/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10706/ : FAILURE

Compile error at [2021-05-25T16:16:03.547Z] ../kv_engine/engines/ep/src/bucket_logger.h:179:10:
error: ?void BucketLogger::sink_it_(const spdlog::details::log_msg&)? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10706/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10851/ : FAILURE

Compile error at [2021-05-25T16:17:21.725Z] ../kv_engine/engines/ep/src/bucket_logger.h:179:10:
error: ?void BucketLogger::sink_it_(const spdlog::details::log_msg&)? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10851/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18662/ : FAILURE

Compile error at [2021-05-25T16:17:12.672Z] ../kv_engine/logger/custom_rotating_file_sink.h:27:10:
fatal error: "spdlog/pattern_formatter.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18662/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9778/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11112/ : FAILURE

Compile error at [2021-05-25T16:14:35.013Z] ../kv_engine/engines/ep/src/bucket_logger.h:179:56:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11112/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7714/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
